--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <link rel="mask-icon" href="../assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
 <link rel="icon" href="../assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
+<script defer src="../assets/dist/js/bootstrap.bundle.min.js" ></script>
 
 
     <style>
@@ -205,8 +206,8 @@
         <div class="container">
           <div class="carousel-caption text-start">
             <h1>bilioteca</h1>
-            <p class="opacity-75">Otorga Prestamos de libros</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+            <p class="opacity-75">Otorga Prestamos de libros digitales y fisicos de la FISEI.</p>
+            <p><a class="btn btn-lg btn-primary" href="#">Ver Más ....</a></p>
           </div>
         </div>
       </div>
@@ -215,8 +216,8 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>CTT- talleres tecnologicos</h1>
-            <p>ofertas  de cursos de capacitacion en area tecnicas. y asesoria</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            <p>Ofertas  de cursos de capacitacion en area tecnicas. y asesoria</p>
+            <p><a class="btn btn-lg btn-primary" href="#">Ver Más ....</a></p>
           </div>
         </div>
       </div>
@@ -224,9 +225,9 @@
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>Administracion de rede</h1>
+            <h1>Administracion de Redes</h1>
             <p>Soporte Tecnico a Estudiantes, docentes y personal Administrativo. Prestamo de Equipos para practicas de laboratorio.</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            <p><a class="btn btn-lg btn-primary" href="#">Ver Más ....</a></p>
           </div>
         </div>
       </div>
@@ -322,7 +323,6 @@
     <p>&copy; 2017–2025 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer>
 </main>
-<script defer src="../assets/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"></script>
 
     </body>
 </html>
