--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link rel="mask-icon" href="../assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
 <link rel="icon" href="../assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
-
+<script defer src="../assets/dist/js/bootstrap.bundle.min.js" ></script>
 
     <style>
       .bd-placeholder-img {
@@ -319,10 +319,10 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2017–2025 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p>&copy; 2025 FISEI. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer>
 </main>
-<script defer src="../assets/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"></script>
+
 
     </body>
 </html>
