--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <link rel="mask-icon" href="../assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
 <link rel="icon" href="../assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
+<script defer src="../assets/dist/js/bootstrap.bundle.min.js" ></script>
 
 
     <style>
@@ -252,9 +253,9 @@
     <div class="row">
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
-        <h2 class="fw-normal">Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <h2 class="fw-normal">Carrera de Software</h2>
+        <p>El perfil profesional del Ingeniero de Software debe demostrar actitudes, destrezas que le permitirán desarrollar actividades en su área profesional, adaptarse a nuevas situaciones, transferir sus conocimientos, habilidades y actitudes a áreas profesionales próximas que garanticen su desempeño en el campo laboral.</p>
+        <p><a class="btn btn-secondary" href="#">Ver detalles &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
